[gd_scene load_steps=24 format=2]

[ext_resource path="res://actors/PhysicsManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/enemies/sticky_drone/states/idle.gd" type="Script" id=2]
[ext_resource path="res://actors/enemies/sticky_drone/sticky_drone.gd" type="Script" id=3]
[ext_resource path="res://actors/enemies/sticky_drone/states/walk.gd" type="Script" id=4]
[ext_resource path="res://actors/FlashManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/Health.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/enemies/sticky_drone/textures/sticky-drone.png" type="Texture" id=7]
[ext_resource path="res://actors/enemies/projectiles/laser/Laser.tscn" type="PackedScene" id=8]
[ext_resource path="res://actors/enemies/AggroManager.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/enemies/sticky_drone/states/shoot.gd" type="Script" id=10]
[ext_resource path="res://actors/enemies/sticky_drone/states/crouch.gd" type="Script" id=11]
[ext_resource path="res://actors/enemies/sticky_drone/states/uncrouch.gd" type="Script" id=12]
[ext_resource path="res://actors/enemies/ReactSprite.tscn" type="PackedScene" id=13]
[ext_resource path="res://actors/enemies/sticky_drone/states/alerted.gd" type="Script" id=14]
[ext_resource path="res://actors/enemies/sticky_drone/states/unalerted.gd" type="Script" id=15]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="Animation" id=2]
resource_name = "crouch"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_transition_to_shoot_state"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "crouching"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=4]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "uncrouch"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=6]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6.5, 6.5 )

[node name="StickyDrone" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 516
script = ExtResource( 3 )

[node name="Health" parent="." instance=ExtResource( 6 )]
MAX_HEALTH = 3

[node name="FlashManager" parent="." instance=ExtResource( 5 )]
sprite_path = NodePath("../Sprite")
total_duration = 0.3
single_flash_duration = 0.075
flash_color = Color( 1, 1, 1, 1 )

[node name="PhysicsManager" parent="." instance=ExtResource( 1 )]
movement_speed_tiles_per_second = 1.0

[node name="AggroManager" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, -8 )
aggro_radius_tiles = 8.0
unaggro_radius_tiles = 14.0

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="IdleDurationTimer" type="Timer" parent="States/Idle"]

[node name="Walk" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="WalkDurationTimer" type="Timer" parent="States/Walk"]

[node name="Alerted" type="Node" parent="States"]
script = ExtResource( 14 )

[node name="AlertedDurationTimer" type="Timer" parent="States/Alerted"]

[node name="Unalerted" type="Node" parent="States"]
script = ExtResource( 15 )

[node name="UnalertedDurationTimer" type="Timer" parent="States/Unalerted"]

[node name="TurnAroundDurationTimer" type="Timer" parent="States/Unalerted"]

[node name="Crouch" type="Node" parent="States"]
script = ExtResource( 11 )

[node name="Shoot" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="Uncrouch" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="ReactSprite" parent="." instance=ExtResource( 13 )]
position = Vector2( -1, -26 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 7 )
vframes = 5
hframes = 6
frame = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -6.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 2 )
anims/crouching = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/uncrouch = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.5, -6.5 )
shape = SubResource( 7 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 272

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, -6.5 )
shape = SubResource( 8 )

[node name="Laser" parent="." instance=ExtResource( 8 )]
show_behind_parent = true
position = Vector2( 0, -12 )
outer_beam_width = 4.0
inner_beam_width = 2.0
beam_impact_radius = 2.0
